@@ -3,6 +3,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix python binding backwards compatibility in replace_trackers
 	* fix possible starvation in metadata extension
 	* fix crash when creating torrents and optimizing file order with pad files
 	* disable support for large MTUs in uTP until it is more reliable
